--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,7 +55,9 @@ x-airflow-common:
   environment:
     &airflow-common-env
     # Set executor to CeleryExecutor 
-    AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+    #AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+    # Set executor to SequentialExecutor and see if OOM errors are resolved. If they are, then the issue is with the CeleryExecutor configuration and not with the DAGs or tasks themselves.
+    AIRFLOW__CORE__EXECUTOR: SequentialExecutor
     # Use SQLAlchemy to connect to Airflow's metadata Postgres database using the psycopg2 driver
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${METADATA_DATABASE_USERNAME}:${METADATA_DATABASE_PASSWORD}@${POSTGRES_CONN_HOST}:${POSTGRES_CONN_PORT}/${METADATA_DATABASE_NAME}
     # Postgres database backend for storing task results executed by workers
