--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,6 +111,7 @@ services:
   postgres:
     container_name: postgres
     image: postgres:13
+    mem_limit: 1g
     # Use the .env file to read the connection params - SWITCH THIS OFF WHEN USING GITHUB ACTIONS
     # env_file:
     #   - .env
@@ -147,6 +148,7 @@ services:
     # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
     image: redis:7.2-bookworm
     container_name: redis
+    mem_limit: 512m
     expose:
       - 6379
     healthcheck:
@@ -161,6 +163,7 @@ services:
     <<: *airflow-common
     command: webserver
     container_name: airflow-webserver
+    mem_limit: 1g
     ports:
       - "8080:8080"
     healthcheck:
@@ -179,6 +182,7 @@ services:
     <<: *airflow-common
     command: scheduler
     container_name: airflow-scheduler
+    mem_limit: 1g
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
       interval: 30s
@@ -195,6 +199,7 @@ services:
     <<: *airflow-common
     command: celery worker
     container_name: airflow-worker
+    mem_limit: 2g
     healthcheck:
       test:
         - "CMD-SHELL"
